Switch to my username on npm

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "electron",
     "data"
   ],
-  "author": "nteract",
+  "author": "rgbkrk",
   "license": "BSD",
   "bugs": {
     "url": "https://github.com/nteract/composition/issues"
