--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/nteract/composition",
   "dependencies": {
-    "jmp": "0.0.7"
+    "jmp": "0.0.7",
+    "jupyter-paths": "^0.1.0"
   }
 }
