--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/nteract/composition",
   "dependencies": {
+    "codemirror": "^5.10.0",
     "color": "^0.10.1",
     "history": "^1.17.0",
     "immutable": "^3.7.6",
@@ -38,6 +39,7 @@
     "jupyter-paths": "^0.1.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.3",
+    "react-code-mirror": "^3.0.6",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "rx": "^4.0.7"
