Rely on transformime-react

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
     "rx": "^4.0.7",
-    "transformime": "^2.1.1",
-    "transformime-jupyter-transformers": "^0.2.0"
+    "transformime-react": "0.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
