--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.14.3",
     "react-code-mirror": "^3.0.6",
     "react-dom": "^0.14.3",
+    "react-markdown": "^1.2.1",
     "react-router": "^1.0.3",
     "rx": "^4.0.7",
     "transformime-react": "0.1.0"
