--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js: 
   - "4.2"
   - "5.1"
+before_script:
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 env:
   - CXX=g++-4.8
 addons:
