--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "electron-mocha --renderer --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
+    "test": "electron-mocha --renderer --compilers js:babel-core/register 'test/**/*.@(js|jsx)'",
     "start": "electron main.js",
     "build": "npm run build:osx && npm run build:win32 && npm run build:linux",
     "build:osx": "electron-packager ./ PipBoy --platform=darwin --arch=x64 --version=0.35.1",
