--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: 
+node_js:
   - "4.2"
   - "5.1"
 before_script:
@@ -10,5 +10,6 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - libzmq3-dev
     packages:
       - g++-4.8
