--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ansi-to-html": "^0.3.0",
     "codemirror": "^5.10.0",
     "color": "^0.10.1",
+    "commutable": "^0.1.2",
     "history": "^1.17.0",
     "immutable": "^3.7.6",
     "normalize.css": "^3.0.3",
