--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^0.14.5",
     "react-code-mirror": "^3.0.6",
     "react-dom": "^0.14.5",
+    "react-jupyter-display-area": "0.0.1",
     "react-markdown": "^1.2.1",
     "react-router": "^1.0.3",
     "rx": "^4.0.7",
