--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "electron-mocha --renderer --compilers js:babel-core/register 'test/**/*.@(js|jsx)'",
     "start": "electron main.js",
     "build": "npm run build:osx && npm run build:win32 && npm run build:linux",
-    "build:osx": "electron-packager ./ PipBoy --platform=darwin --arch=x64 --version=0.36.2",
-    "build:win32": "electron-packager ./ PipBoy --platform=win32 --arch=x64 --version=0.36.2",
-    "build:linux": "electron-packager ./ PipBoy --platform=linux --arch=x64 --version=0.36.2"
+    "build:osx": "electron-packager ./ Composition --platform=darwin --arch=x64 --version=0.36.2",
+    "build:win32": "electron-packager ./ Composition --platform=win32 --arch=x64 --version=0.36.2",
+    "build:linux": "electron-packager ./ Composition --platform=linux --arch=x64 --version=0.36.2"
   },
   "repository": {
     "type": "git",
