--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/nteract/composition",
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-beta.1",
     "ansi-to-html": "^0.3.0",
     "codemirror": "^5.10.0",
     "color": "^0.10.1",
@@ -43,7 +44,6 @@
     "react-jupyter-display-area": "0.0.1",
     "react-markdown": "^1.2.1",
     "react-router": "^1.0.3",
-    "rx": "^4.0.7",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
     "transformime-react": "0.3.0"
