--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "codemirror": "^5.10.0",
     "color": "^0.10.1",
     "commutable": "^0.1.2",
+    "enchannel-zmq-backend": "^1.0.0",
     "history": "^1.17.0",
     "immutable": "^3.7.6",
     "normalize.css": "^3.0.3",
@@ -46,7 +47,9 @@
     "react-router": "^1.0.3",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
-    "transformime-react": "0.3.0"
+    "spawnteract": "0.0.4",
+    "transformime-react": "0.3.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
