--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
-    "react-addons-test-utils": "^0.14.5"
+    "react-addons-test-utils": "^0.14.5",
+    "sinon": "^1.17.3"
   }
 }
