--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "^0.14.5",
     "react-code-mirror": "^3.0.6",
     "react-dom": "^0.14.5",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.2",
     "react-jupyter-display-area": "0.0.2",
     "react-markdown": "^1.2.1",
     "react-router": "^1.0.3",
