--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@reactivex/rxjs": "5.0.0-beta.2",
     "ansi-to-html": "^0.3.0",
-    "codemirror": "^5.10.0",
+    "codemirror": "^5.12.0",
     "color": "^0.10.1",
     "commutable": "^0.4.0",
     "enchannel-zmq-backend": "^1.0.1",
@@ -36,13 +36,13 @@
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
     "normalize.css": "^3.0.3",
-    "react": "^0.14.5",
+    "react": "^0.14.7",
     "react-code-mirror": "^3.0.6",
-    "react-dom": "^0.14.5",
-    "react-dnd": "^2.0.2",
-    "react-dnd-html5-backend": "^2.0.2",
-    "react-jupyter-display-area": "0.1.0",
-    "react-markdown": "^1.2.1",
+    "react-dnd": "^2.1.2",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^0.14.7",
+    "react-jupyter-display-area": "^0.1.0",
+    "react-markdown": "^1.2.4",
     "react-router": "^1.0.3",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
