--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
-    "react-jupyter-display-area": "^0.1.0",
+    "react-jupyter-display-area": "0.1.0",
     "react-markdown": "^1.2.4",
     "react-router": "^1.0.3",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
