--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@reactivex/rxjs": "5.0.0-beta.2",
     "ansi-to-html": "^0.3.0",
+    "atom-keymap": "^6.3.1",
     "codemirror": "^5.12.0",
     "color": "^0.10.1",
     "commutable": "^0.4.0",
