--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "history": "^1.17.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
+    "material-design-icons": "^2.2.0",
     "normalize.css": "^3.0.3",
     "react": "^0.14.7",
     "react-code-mirror": "^3.0.6",
