--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^5.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-export-extensions": "^6.3.13",
     "babel-preset-es2015": "^6.1.18",
@@ -69,9 +69,9 @@
     "electron-compilers": "^2.0.4",
     "electron-mocha": "^0.7.0",
     "electron-prebuilt": "^0.36.2",
-    "eslint": "^1.10.3",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.1.0",
     "react-addons-test-utils": "^0.14.5",
     "sinon": "^1.17.3",
     "watch": "^0.17.1"
