--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-eslint": "^5.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-export-extensions": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
