--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint": "^2.3.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-plugin-react": "^4.1.0",
+    "estraverse-fb": "^1.3.1",
     "react-addons-test-utils": "^0.14.5",
     "sinon": "^1.17.3",
     "watch": "^0.17.1"
