Watch PNG via git-lfs as well.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.woff2 filter=lfs diff=lfs merge=lfs -text
 *.woff filter=lfs diff=lfs merge=lfs -text
 *.eot filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
