--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
-      "camelcase": [0]
+      "camelcase": [0],
+      "no-console": [2, { allow: ["warn", "error"] }]
   }
 }
