--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.woff filter=lfs diff=lfs merge=lfs -text
 *.eot filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.ijmap filter=lfs diff=lfs merge=lfs -text
