--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "codemirror": "^5.13.4",
     "commander": "^2.9.0",
     "commutable": "^0.6.0",
+    "electron-json-storage": "^2.0.0",
     "enchannel-zmq-backend": "^1.0.1",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
