--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "commander": "^2.9.0",
     "commutable": "^0.6.0",
     "enchannel-zmq-backend": "^1.0.1",
+    "github-api": "^0.11.2",
+    "github4": "^0.5.5",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
     "normalize.css": "^4.0.0",
