--- a/static/extend.plist
+++ b/static/extend.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
-    <key>CFBbundleDocumentTypes</key>
+    <key>CFBundleDocumentTypes</key>
     <dict>
       <key>CFBundleTypeExtensions</key>
       <array>
