--- a/static/extend.plist
+++ b/static/extend.plist
@@ -10,36 +10,38 @@
           <string>ipynb</string>
         </array>
         <key>CFBundleTypeName</key>
-        <string>public.ipynb</string>
+        <string>io.nteract.notebook</string>
         <key>CFBundleTypeRole</key>
         <string>Editor</string>
         <key>LSHandlerRank</key>
         <string>Owner</string>
         <key>LSItemContentTypes</key>
         <array>
-          <string>public.ipynb</string>
+          <string>io.nteract.notebook</string>
         </array>
       </dict>
     </array>
-    <key>UTImportedTypeDeclarations</key>
-    <dict>
-      <key>UTTypeConformsTo</key>
-      <array>
-        <string>public.data</string>
-      </array>
-      <key>UTTypeIdentifier</key>
-      <string>public.ipynb</string>
-      <key>UTTypeTagSpecification</key>
+    <key>UTExportedTypeDeclarations</key>
+    <array>
       <dict>
-        <key>com.apple.ostype</key>
-        <string>IPYNB</string>
-        <key>public.filename-extension</key>
+        <key>UTTypeConformsTo</key>
         <array>
-          <string>ipynb</string>
+          <string>public.composite-content</string>
         </array>
-        <key>public.mime-type</key>
-        <string>application/x-ipynb+json</string>
+        <key>UTTypeDescription</key>
+        <string>nteract notebook</string>
+        <key>UTTypeIdentifier</key>
+        <string>io.nteract.notebook</string>
+        <key>UTTypeTagSpecification</key>
+        <dict>
+          <key>public.filename-extension</key>
+          <array>
+            <string>ipynb</string>
+          </array>
+          <key>public.mime-type</key>
+          <string>application/x-ipynb+json</string>
+        </dict>
       </dict>
-    </dict>
+    </array>
   </dict>
 </plist>
