--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "test": "npm run test:functional && npm run test:unit",
     "test:unit": "electron-mocha --renderer --compilers js:babel-core/register 'test/renderer/**/*.js'",
-    "test:functional": "npm run build && electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
+    "pretest:functional": "npm run build",
+    "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
     "start": "electron .",
     "prebuild": "rimraf build",
