Streamline icon generation.
And adjust colors a bit.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "prebuild": "rimraf build",
     "build": "babel src --out-dir build",
-    "build:icon": "cd static/icons;iconutil -c icns nteract.iconset; mv nteract.icns ../icon.icns",
+    "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
     "build:watch": "npm run build -- --watch",
     "test": "npm run test:functional && npm run test:unit",
     "pretest:functional": "npm run build",
