--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,59 @@
-language: node_js
-node_js:
-  - "5.1"
-before_script:
-  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
-env:
-  - ZMQ="4.1.3" SODIUM="1.0.5"
+sudo: false
+
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+    - ubuntu-toolchain-r-test
     packages:
-      - g++-4.8
-      - gcc-4.8
-      - uuid-dev
+    - gcc-4.9
+    - g++-4.9
+    - uuid-dev
+    - libssl-dev
+
+language: node_js
+
+node_js:
+ - "5"
+
+env:
+  global:
+   - ZMQ="3.2.5"
+  matrix:
+   - GROUP=unit
+   - GROUP=functional
 
 before_install:
-  - travis_before_install
+ - export CXX=g++-4.9
+ - export CC=gcc-4.9
+ - mkdir ldlocal
+ - export LDHACK=`pwd`/ldlocal
+ - export LDFLAGS=-L$LDHACK/lib
+ - export CFLAGS=-I$LDHACK/include
+ - export LD_RUN_PATH=$LDHACK/lib
+ - export LD_LIBRARY_PATH=$LDHACK/lib
+ - export PKG_CONFIG_PATH=$LDHACK/lib/pkgconfig
+ - echo $PKG_CONFIG_PATH
+ - wget http://download.zeromq.org/zeromq-$ZMQ.tar.gz
+ - tar xzvf zeromq-$ZMQ.tar.gz
+ - '[ -z "$SODIUM" ] || wget https://download.libsodium.org/libsodium/releases/libsodium-$SODIUM.tar.gz'
+ - '[ -z "$SODIUM" ] || tar xzvf libsodium-$SODIUM.tar.gz'
+ - '[ -z "$SODIUM" ] || cd libsodium-$SODIUM'
+ - '[ -z "$SODIUM" ] || ./autogen.sh'
+ - '[ -z "$SODIUM" ] || ./configure --prefix=$LDHACK'
+ - '[ -z "$SODIUM" ] || make'
+ - '[ -z "$SODIUM" ] || make install'
+ - '[ -z "$SODIUM" ] || cd ..'
+ - '[ -z "$SODIUM" ] || export LIBS=-lsodium && export sodium_CFLAGS=$CFLAGS && export sodium_LIBS=$LDFLAGS'
+ - cd zeromq-$ZMQ
+ - ./autogen.sh
+ - if [[ -z "$SODIUM" ]]; then ./configure --prefix=$LDHACK; else ./configure --prefix=$LDHACK --with-libsodium=$LDHACK; fi
+ - make
+ - make install
+ - cd ..
 
 install: env LD_LIBRARY_PATH=$LDHACK/lib LD_RUN_PATH=$LDHACK/lib PKG_CONFIG_PATH=$LDHACK/lib/pkgconfig LDFLAGS=-L$LDHACK/lib CFLAGS=-I$LDHACK/lib/include npm install
 
-cache:
-  directories:
-    - node_modules
-    - $HOME/.electron
+before_script:
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+
+script: travis_retry npm run test:$GROUP
