Order steps by common order, introduce clean step

--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "description": ":notebook: the nteract notebook",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
-    "test": "npm run test:functional && npm run test:unit",
-    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
-    "pretest:functional": "npm run build",
-    "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
-    "test:watch": "watch 'npm run test' test/",
     "start": "electron .",
+    "prepublish": "npm run build",
+    "clean": "rimraf build dist",
+    "lint": "eslint .",
     "prebuild": "rimraf build",
     "build": "babel src --out-dir build",
     "build:icon": "cd static/icons;iconutil -c icns nteract.iconset; mv nteract.icns ../icon.icns",
     "build:watch": "npm run build -- --watch",
-    "prepublish": "npm run build",
+    "test": "npm run test:unit && npm run test:functional",
+    "pretest:functional": "npm run build",
+    "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
+    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:watch": "watch 'npm run test' test/",
     "predist": "npm run build && rimraf dist",
-    "postdist": "npm install",
     "dist": "electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
     "dist:linux32": "npm run dist -- --platform=linux --arch=ia32",
-    "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract"
+    "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract",
+    "postdist": "npm install"
   },
   "repository": {
     "type": "git",
