Introduce nyc for coverage reporting

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
+    "coverage": "nyc npm run test:unit",
     "predist": "npm run build && rimraf dist",
     "dist": "electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
@@ -86,6 +87,7 @@
     "eslint-plugin-react": "^4.3.0",
     "jsdom": "^8.4.0",
     "mocha": "^2.4.5",
+    "nyc": "^6.4.0",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "rimraf": "^2.5.2",
