--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,6 @@ before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 script: travis_retry npm run test:$GROUP
+
+after_success: npm run coverage
+
