--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "build": "babel src --out-dir build",
     "build:icon": "cd static/icons;iconutil -c icns nteract.iconset; mv nteract.icns ../icon.icns",
     "build:watch": "npm run build -- --watch",
-    "test": "npm run test:unit && npm run test:functional",
+    "test": "nyc npm run test:unit && npm run test:functional",
     "pretest:functional": "npm run build",
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
-    "coverage": "nyc npm run test:unit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "predist": "npm run build && rimraf dist",
     "dist": "electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
@@ -79,6 +79,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
+    "coveralls": "^2.11.9",
     "electron-mocha": "^1.0.3",
     "electron-prebuilt": "^0.37.4",
     "enzyme": "^2.2.0",
