--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "babel src --out-dir build",
     "build:icon": "cd static/icons;iconutil -c icns nteract.iconset; mv nteract.icns ../icon.icns",
     "build:watch": "npm run build -- --watch",
-    "test": "nyc npm run test:unit && npm run test:functional",
+    "test": "npm run test:functional && nyc npm run test:unit",
     "pretest:functional": "npm run build",
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
