Switch to codecov

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "predist": "npm run build && rimraf dist",
     "dist": "electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
@@ -79,6 +79,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
+    "codecov": "^1.0.1",
     "coveralls": "^2.11.9",
     "electron-mocha": "^1.0.3",
     "electron-prebuilt": "^0.37.4",
