--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npm run test:functional && nyc npm run test:unit",
     "pretest:functional": "npm run build",
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
-    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:unit": "nyc mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "predist": "npm run build && rimraf dist",
