Run unit tests again as a precoverage script

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test": "npm run test:functional && npm run test:unit",
     "pretest:functional": "npm run build",
     "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
-    "test:unit": "nyc mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
+    "precoverage": "nyc npm run test:unit",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "predist": "npm run build && rimraf dist",
     "dist": "electron-packager . nteract --prune --out dist",
