--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-jupyter-display-area": "^0.3.0",
+    "react-notification-system": "^0.2.7",
     "remark": "^4.2.0",
     "remark-react": "^2.0.0",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
