--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
     "spawnteract": "^2.0.0",
-    "transformime-react": "^0.5.0",
+    "transformime-react": "^0.6.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
@@ -89,8 +89,10 @@
     "electron-prebuilt": "^0.37.4",
     "enzyme": "^2.2.0",
     "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.0.2",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^1.0.2",
+    "eslint-plugin-react": "^5.0.1",
     "jsdom": "^8.4.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.0",
