--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commutable": "^0.6.0",
     "electron-json-storage": "^2.0.0",
     "electron-packager": "^7.0.0",
+    "enchannel": "^1.1.2",
     "enchannel-zmq-backend": "^1.0.1",
     "github-api": "^0.11.2",
     "github4": "^0.6.0",
