--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
+    "mathjax-electron": "^0.2.0",
     "normalize.css": "^4.0.0",
     "nteract-assets": "^1.1.0",
     "react": "^15.0.2",
