Take out unused keymap, trim unsolved unresolved

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   },
   "rules": {
       "camelcase": [0],
-      "no-console": [2, { allow: ["warn", "error"] }]
+      "no-console": [2, { allow: ["warn", "error"] }],
+      import/no-unresolved: [0]
   }
 }
