--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "homepage": "https://github.com/nteract/nteract",
   "dependencies": {
     "@reactivex/rxjs": "5.0.0-beta.2",
-    "atom-keymap": "^6.3.1",
     "codemirror": "^5.13.4",
     "commander": "^2.9.0",
     "commutable": "^0.9.0",
@@ -79,6 +78,7 @@
   "devDependencies": {
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-class-properties": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.1.18",
