Include linting in the tests.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron .",
     "prepublish": "npm run build",
     "clean": "rimraf build dist",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "prebuild": "rimraf build",
     "build": "babel src --out-dir build",
     "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
@@ -19,6 +19,7 @@
     "test:performance": "electron-mocha --renderer --compilers js:babel-core/register 'test/performance/**/*.js'",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
+    "test:lint": "npm run lint",
     "precoverage": "nyc npm run test:unit",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "predist": "npm run build && rimraf dist",
