--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
   },
   "homepage": "https://github.com/nteract/nteract",
   "dependencies": {
-    "@reactivex/rxjs": "5.0.0-beta.2",
+    "rxjs": "^5.0.0-beta.6",
     "codemirror": "^5.13.4",
     "commander": "^2.9.0",
     "commutable": "^0.9.0",
     "electron-json-storage": "^2.0.0",
     "electron-packager": "^7.0.0",
-    "enchannel": "^1.1.2",
-    "enchannel-zmq-backend": "^1.0.1",
+    "enchannel": "^1.1.3",
+    "enchannel-zmq-backend": "^2.0.1",
     "github-api": "^1.1.0",
     "github4": "^1.0.0",
     "home-dir": "^1.0.0",
@@ -74,7 +74,7 @@
     "remark-react": "^2.1.0",
     "spawnteract": "^2.0.0",
     "transformime-react": "^1.0.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
