--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "nyc": "^6.4.2",
     "react-addons-test-utils": "^15.0.2",
     "react-dom": "^15.0.2",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.5.2",
     "watch": "^0.17.1"
   }
