--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "github": "^1.1.0",
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
+    "jupyter-js-widgets": "^1.1.1",
     "kernelspecs": "^1.0.1",
     "mathjax-electron": "^0.2.0",
     "normalize.css": "^4.0.0",
