--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "rules": {
       "camelcase": [0],
       "no-console": [2, { allow: ["warn", "error"] }],
-      import/no-unresolved: [0]
+      import/no-unresolved: [0],
+      "no-underscore-dangle": [0],
   }
 }
