--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "immutable": "^3.7.6",
     "jupyter-js-widgets": "^1.1.1",
     "kernelspecs": "^1.0.1",
+    "lodash.difference": "^4.3.0",
     "mathjax-electron": "^0.2.0",
     "normalize.css": "^4.0.0",
     "nteract-assets": "^2.0.0",
