Reduce our babel footprint, fix electron deprecate

--- a/package.json
+++ b/package.json
@@ -52,10 +52,8 @@
     "commander": "^2.9.0",
     "commutable": "^0.10.0",
     "electron-json-storage": "^2.0.0",
-    "electron-packager": "^7.0.2",
     "enchannel": "^1.1.3",
     "enchannel-zmq-backend": "^2.0.1",
-    "github-api": "^2.0.0",
     "github4": "^1.0.0",
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
@@ -87,13 +85,14 @@
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-class-properties": "^6.9.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-node6": "^0.2.0",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "codecov": "^1.0.1",
     "coveralls": "^2.11.9",
     "electron-mocha": "^2.1.0",
     "electron-osx-sign": "^0.3.1",
+    "electron-packager": "^7.0.2",
     "electron-prebuilt": "^1.1.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.9.0",
