--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "electron-json-storage": "^2.0.0",
     "enchannel": "^1.1.3",
     "enchannel-zmq-backend": "^2.0.1",
-    "github4": "^1.0.0",
+    "github": "^1.1.0",
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
