--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "electron-mocha": "^2.1.0",
     "electron-osx-sign": "^0.3.1",
     "electron-packager": "^7.0.2",
-    "electron-prebuilt": "^1.1.1",
+    "electron-prebuilt": "1.1.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
