--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "normalize.css": "^4.0.0",
     "nteract-assets": "^2.0.0",
     "react": "^15.1.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
     "react-codemirror": "^0.2.6",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
