--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
   {
     "presets": [
-      "es2015-node6/object-rest",
+      "es2015-node6",
       "react"
     ],
     "plugins": [
-      "transform-class-properties",
-      "transform-object-rest-spread"
+      "transform-class-properties"
     ]
   }
