--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "remark-react": "^2.1.0",
     "rxjs": "^5.0.0-beta.6",
     "spawnteract": "^2.0.0",
+    "tmp": "0.0.28",
     "transformime-react": "^1.0.0",
     "uuid": "^2.0.2"
   },
