Rely on codecov bash instead of codecov-node

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
     "precoverage": "nyc npm run test:unit",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
     "predist": "npm run build && rimraf dist",
     "dist": "electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
@@ -89,7 +89,6 @@
     "babel-preset-es2015-node6": "^0.2.0",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
-    "codecov": "^1.0.1",
     "electron-mocha": "^2.1.0",
     "electron-osx-sign": "^0.3.1",
     "electron-packager": "^7.0.2",
