--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ before_script:
 - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script: travis_retry npm run test:$GROUP
 after_success:
-  - 'if [[ $GROUP == unit* ]]; then npm run coverage; fi'
+  - 'if [[ $GROUP == unit* ]]; then npm run coverage; bash <(curl -s https://codecov.io/bash); fi'
