Update eslint, bring back no-unresolved
Electron imports are now correctly recognized. As a result of doing
the lint fixups, I found a bug in the widgets/comms setup.

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
   "rules": {
       "camelcase": [0],
       "no-console": [2, { allow: ["warn", "error"] }],
-      import/no-unresolved: [0],
-      "no-underscore-dangle": [0],
+      "no-underscore-dangle": [0]
+  },
+  "settings": {
+      "import/core-modules": ["electron"]
   }
 }
