Spy on copyCell and pasteCell

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-dom": "^15.1.0",
     "redux-logger": "^2.6.1",
     "rimraf": "^2.5.2",
+    "sinon": "^1.17.4",
     "watch": "^0.18.0"
   }
 }
