--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   "homepage": "https://github.com/nteract/nteract",
   "dependencies": {
     "codemirror": "^5.16.0",
-    "commander": "^2.9.0",
     "commutable": "^1.1.2",
     "electron-json-storage": "^2.0.0",
     "enchannel": "^1.1.3",
@@ -81,7 +80,8 @@
     "spawnteract": "^2.0.0",
     "tmp": "0.0.28",
     "transformime-react": "^1.0.0",
-    "uuid": "^2.0.2"
+    "uuid": "^2.0.2",
+    "yargs": "^4.8.1"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
