--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "electron-osx-sign": "^0.3.1",
     "electron-packager": "^7.1.0",
     "electron-prebuilt": "1.1.1",
+    "electron-react-devtools": "^0.3.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
