--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/nteract/nteract",
   "dependencies": {
     "codemirror": "^5.16.0",
+    "commonmark-react-renderer": "^4.2.4",
     "commutable": "^1.1.2",
     "electron-json-storage": "^2.0.0",
     "enchannel": "^1.1.3",
