--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,11 @@
   "rules": {
       "camelcase": [0],
       "no-console": [2, { allow: ["warn", "error"] }],
-      "no-underscore-dangle": [0]
+      "no-underscore-dangle": [0],
+      "react/no-string-refs": [0],
+      "react/jsx-filename-extension": [0],
+      "import/prefer-default-export": [0],
+      "react/no-find-dom-node": [0]
   },
   "settings": {
       "import/core-modules": ["electron"]
