--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
   },
   "homepage": "https://github.com/nteract/nteract",
   "greenkeeper": {
-    "ignore": ["commonmark", "electron-prebuilt", "redux-observable"]
+    "ignore": [
+      "commonmark",
+      "electron-prebuilt",
+      "redux-observable"
+    ]
   },
   "dependencies": {
     "codemirror": "^5.16.0",
@@ -101,8 +105,8 @@
     "electron-react-devtools": "^0.3.1",
     "electron-rebuild": "^1.1.5",
     "enzyme": "^2.2.0",
-    "eslint": "^3.2.0",
-    "eslint-config-airbnb": "^10.0.0",
+    "eslint": "^3.3.0",
+    "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
