mock kernels for shutdown tests

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-dom": "^15.3.0",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
     "watch": "^0.19.1"
   }
 }
