if NODE_ENV === development, log it

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
+    "redux-logger": "^2.6.1",
     "redux-observable": "^0.9.1",
     "redux-undo": "^1.0.0-beta9",
     "rxjs": "^5.0.0-beta.6",
