--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 sudo: false
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.9
+    - g++-4.9
 language: node_js
 node_js:
 - '6'
