Break functional tests up
This gets around the fact that the native electron apis are actually torn down between tests here...

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "build:watch": "npm run build -- --watch",
     "test": "npm run test:unit",
     "pretest:functional": "npm run build",
-    "test:functional": "electron-mocha --compilers js:babel-core/register 'test/main/**/*.js'",
+    "sublaunch": "electron-mocha --compilers js:babel-core/register",
+    "test:functional:launch": "npm run sublaunch -- 'test/main/launch.js'",
+    "test:functional:launchNewNotebook": "npm run sublaunch -- 'test/main/launchNewNotebook.js'",
+    "test:functional": "npm run test:functional:launch && npm run test:functional:launchNewNotebook",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
