Move coverage path for IDE tools to pick up

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
-    "precoverage": "nyc npm run test:unit",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
+    "precoverage": "mkdirp coverage && nyc npm run test:unit",
+    "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info",
     "predist": "npm run build && rimraf dist",
     "dist": "cross-env NODE_ENV=production electron-packager . nteract --prune --out dist --ignore='example-notebooks'",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
