Trim down Travis, cache pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,4 @@
 sudo: false
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.9
-    - g++-4.9
 language: node_js
 node_js:
 - '6'
@@ -16,7 +9,7 @@ env:
   - GROUP=lint
 
 cache:
-  apt: true
+  pip: true
   directories:
     - node_modules
 
