Only run tests once on Travis using coverage group

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 - '6'
 env:
   matrix:
-  - GROUP=unit
+  - GROUP=coverage
   - GROUP=functional
   - GROUP=lint
 
@@ -20,4 +20,4 @@ before_script:
 - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script: travis_retry npm run test:$GROUP
 after_success:
-  - 'if [[ $GROUP == unit* ]]; then npm run coverage; bash <(curl -s https://codecov.io/bash); fi'
+  - 'if [[ $GROUP == coverage* ]]; then bash <(curl -s https://codecov.io/bash); fi'
