Fine, keep your addons

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 sudo: false
 language: node_js
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.9
+    - g++-4.9
 node_js:
 - '6'
 env:
@@ -10,6 +17,7 @@ env:
 
 cache:
   pip: true
+  apt: true
   directories:
     - node_modules
 
