--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:functional:launchNewNotebook": "npm run sublaunch -- 'test/main/launchNewNotebook.js'",
     "test:functional": "npm run test:functional:launch && npm run test:functional:launchNewNotebook",
     "test:coverage": "npm run coverage",
-    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:unit": "mocha -ri test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:unit:individual": "mocha -r test/setup.js --compilers js:babel-core/register ",
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
     "precoverage": "mkdirp coverage && nyc npm run test:unit",
