chore(travis): Add group for Flow; incorporate Flow testing into Travis build

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:unit:individual": "mocha -r test/setup.js --compilers js:babel-core/register ",
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
+    "test:flow": "npm run flow",
     "precoverage": "mkdirp coverage && nyc npm run test:unit",
     "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info",
     "predist": "npm run build && rimraf dist",
