--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - GROUP=coverage
   - GROUP=functional
   - GROUP=lint
+  - GROUP=flow
 
 cache:
   pip: true
@@ -26,6 +27,7 @@ before_install:
 
 before_script:
 - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+- 'if [[ $GROUP == flow* ]]; then npm install flow-typed && flow-typed install; fi'
 script: travis_retry npm run test:$GROUP
 after_success:
   - 'if [[ $GROUP == coverage* ]]; then bash <(curl -s https://codecov.io/bash); fi'
