chore(pack): Disable import rules
This is a tempory linter fix since I don't know how to configure eslint
to work with a additional node_modules folder

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,9 @@
               'render'
             ]
           }
-        ]
+        ],
+        "import/no-unresolved": "off",
+        "import/no-extraneous-dependencies": "off"
   },
   "settings": {
       "import/core-modules": ["electron"]
