chore(pack): Fix node path in tests

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,6 @@
 [options]
 module.ignore_non_literal_requires=true
-
+module.system.node.resolve_dirname=app/node_modules
 [ignore]
 node_modules/
 dist/
