--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "test:functional:launchNewNotebook": "npm run sublaunch -- test/main/launchNewNotebook.js",
     "test:functional": "npm run test:functional:launch && npm run test:functional:launchNewNotebook",
     "test:coverage": "npm run coverage",
-    "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
-    "test:unit:individual": "mocha -r test/setup.js --compilers js:babel-core/register ",
+    "test:unit": "cross-env NODE_PATH=app/node_modules/ mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
+    "test:unit:individual": "cross-env NODE_PATH=app/node_modules/ mocha -r test/setup.js --compilers js:babel-core/register ",
     "test:watch": "watch 'npm run test' test/",
     "test:lint": "npm run lint",
     "test:flow": "npm run flow",
     "precoverage": "mkdirp coverage && nyc npm run test:unit",
-    "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info",
+    "coverage": "cross-env NODE_PATH=app/node_modules/ nyc report --reporter=text-lcov > coverage/lcov.info",
     "pack": "build --dir",
     "dist": "build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
