chore(pack): Change description

--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nteract",
   "version": "0.0.13",
-  "description": ":notebook: the nteract notebook",
+  "description": "Interactive literate coding notebook!",
   "main": "./build/main/index.js",
   "repository": {
     "type": "git",
