chore(pack): Add file associations

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
   "build": {
     "electronVersion": "1.4.3",
     "appId": "io.nteract.nteract",
+    "fileAssociations": {
+      "ext": "ipynb",
+      "name": "ipynb"
+    },
     "mac": {
       "category": "public.app-category.developer-tools"
     }
