chore(pack): Use NSIS installer

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     },
     "mac": {
       "category": "public.app-category.developer-tools"
+    },
+    "win": {
+      "target": "nsis"
     }
   },
   "greenkeeper": {
